Make sure there's no scrollbars on the code samples

--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -119,6 +119,7 @@ article
 pre
   padding: 18px !important
   border-radius: 8px
+  overflow: hidden !important
 
 // content styles
 
